--- a/main.css
+++ b/main.css
@@ -13,7 +13,6 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
-	background: url(../img/paper_fibers.png);
 }
 
 ::-moz-selection {
@@ -56,25 +55,6 @@ textarea {
     padding: 0.2em 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Alegreya', serif;
-}
-
-p, a {
-	font-family: 'Noto Sans', sans-serif;
-	line-height: 1.7em;
-	color: #3d3d3d;
-	margin: 0;
-}
-
-h2 {
-	margin: 0.83em 0 0;
-}
-
-h3 {
-	margin: 1em 0 0;
-}
-
 
 /* ==========================================================================
    Author's custom styles
@@ -82,229 +62,109 @@ h3 {
  .container{
 	 width:1080px;
 	 margin:0 auto;
-	 overflow:visible;
+	 overflow:hidden;
 	 } 
 .main_container{
 	 width:1080px;
-	 margin:1em auto;
+	 margin:2em auto;
 	 overflow:hidden;
 	 }  
 .box{
 	float:left;
 	}
-.main_image{
-	/*border:1px solid gray;*/
-	margin-bottom:2em;
-	}
-.main_image img{
-	width:100%;
-	display:block;
-	}
 	
-.left_sidebar{
-	width:350px;
-	margin-right: 15px;
+.box.left_sidebar{
+	width:380px;
 	}
-/*.left_sidebar p,.main_content p, .right_sidebar p{
+.left_sidebar p,.main_content p, .right_sidebar p{
 	padding-right:2em;
-	}*/
-.left_sidebar #left_img img{
-	width: 100%;
 	}
-.left_sidebar #article{
-	margin-top: 20px;
-	}
-.left_sidebar #left_bracket{
-	width: 45px;
-	margin-right: 5px;
-	}
-.left_sidebar #right_bracket{
-	width: 45px;
-	}
-.left_sidebar #article_content{
-	width: 245px;
-	padding-left: 5px;
-		}
-.left_sidebar #article_content h2 {
-	color: #6EA05B;
-} 
 .box.main_content{
-	width:490px;
-	padding:0 10px;
-	}
-.main_content_padding{
-	padding: 0 15px;
+	width:500px;
 	}
 
-.main_content h1{
-	color:#1f8c48;
-	margin: 0;
+.left_sidebar_image img{
+	width:337px;
+	display:block;
 	}
+
 .box.right_sidebar{
-	width:190px;
-	background-color:#666;
-	margin-left: 11px;
+	width:200px;
 	}
 .donation_box{
-	padding:15px 15px 3px 15px;
-	background-color:#1f8c48;
-	margin:0;
-	box-shadow:1px 3px 3px #444;
+	background-color:green;
+	overflow:hidden;
 	}
 .donation_box img{
 	float:right;
 	display:block;
 	}
-a{
-	text-decoration: none;
-	}
-a:hover .donation_box{
-	background: #e4e6b6;
-	color: #444;
-	}
-a:hover .donation_box p {
-	color: #444;
-}
-.donation_box p {
+.donation_box a{
 	display:block;
 	text-decoration:none;
 	color:white;
 	}
 .posting{
-	color: #6EA05B;
-	margin: 0;
-	padding:.75em;
+	background-color:gray;
+	color:white;
 	}
-.posting p{
-	/*border-bottom: 2px solid white;*/
-    color: white;
-    font-size: 13px;
-    margin: 0 0 10px;
-	}
-.posting a {
-	color: #FFF;
-	text-decoration: underline;
-}
-.read-more{
-	display:block;
-	}
-.posting a:hover {
-	color: #CCC;
-}
-
-#event_post {
-	position: relative;
-	width: 150px;
-	margin: 10px auto;
-}
-
-#event_post img {
-	width: 150px;
-	margin: 0 auto;
-}
-
-#event_post h3 {
-	background: #1F8C48;
-	padding: 5px;
-	color: #FFF;
-	position: absolute;
-	top: -10px;
-	left: -10px;
-	line-height: 18px;
-}
-
-#event_post h3 span {
-	background: url(../img/triangle.png);
-	position: absolute;
-	bottom: -10px;
-	left: 0;
-	width: 10px;
-	height: 10px;
-	background-size: 100%;
-}
-
-
-
    /* ==========================================================================
  Header Css
    ========================================================================== */
 #header{
-	background: url(../img/debut_dark_1.png);
-	min-height: 150px;
+	background: #002621;
+	height: 150px;
 	}
 	#inner_header #logo{
 		width: 40%;
 		float: left;
 		margin-top: 2%;
 		}
-	#inner_header #logo a:hover {
-		opacity: .8;
-	}
 													/*NAV*/
 	#inner_header #nav{
-		width: 60%;
+		width: 58%;
 		float: right;
-		/*margin-top: 2%;*/
+		margin-top: 2%;
 		}
-		/*#inner_header #nav ul{
-			}*/
 		#inner_header #nav ul li{
 			float: left;
 			list-style-type:none;
-			position: relative;
+			padding: 1.5%;
 			border-right: 1px solid white;
-			
 			}
 			#inner_header #nav ul .no_border{
 				border: none;
 				}
-				#inner_header #nav ul li a{
-					text-decoration: none;
-					color: white;
-					font-size: 16px;
-					font-weight: 100;
-					/*text-align:center;*/
-					padding: 15px 10px;
+			#inner_header #nav ul li a{
+				text-decoration: none;
+				color: white;
+				font-size: 18px;
+				font-weight: 100;
+				padding-bottom: 20px;
+				}
+				#inner_header #nav ul li:hover a{
+					color: #c5d8ba;
+					font-weight: 500;
 					}
-					#inner_header #nav ul li:hover a{
-						color: #c5d8ba;
-						}
 													/*Dropdown*/
 #inner_header #nav ul li ul{
 	display: none;
+	margin-top: 1%;
 	position: absolute;
-	top: 15px;
 	border-radius: 5px;
 	}
-	
 	#inner_header #nav ul li ul li{
 		border: none;
 		}
-		
-		#inner_header #nav ul li:hover ul li a{
+		#inner_header #nav ul li ul li a{
 			color: white;
 			}
-			
 	#inner_header #nav ul li:hover ul{
 		display: block;
 		position: absolute;
-		padding: 0;
+		padding: 15px 0px;
+		background: #29853b;
 		}
-		
-		#inner_header #nav ul li ul li a {
-			padding: 6px;
-			background: #29853b;
-			border-radius: 5px;
-			}
-			
-		#inner_header #nav ul li ul li:hover a {
-			color: #002621;
-			
-		}
-		
-		/*#inner_header #nav ul li ul li:hover {
-			background: black;
-		}*/
 /* ==========================================================================
    Footer custom style sheets
    ========================================================================== */
@@ -350,7 +210,6 @@ a:hover .donation_box p {
 			top: 2px;
 			left:10px;
 			margin:0;
-			line-height:120%;
 			}
 								
 	#footer #facebook_footer{
@@ -376,7 +235,6 @@ a:hover .donation_box p {
 			position: absolute;
 			top: -2px;
 			margin:0;
-			line-height: 135%;
 			}	
 #footer .footer_content{
 	text-alight: right;
@@ -553,12 +411,3 @@ a:hover .donation_box p {
         page-break-after: avoid;
     }
 }
-
-/*
-font-family: 'Alegreya SC', serif;
-font-family: 'Noto Sans', sans-serif;
-font-family: 'Arimo', sans-serif;
-font-family: 'Simonetta', cursive;
-font-family: 'Alegreya', serif;
-*/
-
